# kubernetes-rust

./: Cargo.toml  Dockerfile  Makefile  inclusterconfig.yml  settings
examples/: core_api_versions.rs  example.rs  incluster_config.rs  list_pod.rs  list_pods.rs
k8s/: Cargo.toml  README.md
k8s/.swagger-codegen/: COMMIT
k8s/docs/: AdmissionregistrationApi.md  AdmissionregistrationV1beta1Api.md  AdmissionregistrationV1beta1ServiceReference.md  ApiextensionsV1beta1Api.md  ApiregistrationApi.md  ApiregistrationV1Api.md  ApisApi.md  AppsApi.md  AppsV1Api.md  AppsV1beta1DeploymentCondition.md  AppsV1beta1DeploymentRollback.md  AppsV1beta1RollingUpdateDeployment.md  AppsV1beta2Api.md  AuthenticationV1beta1Api.md  AuthorizationApi.md  AuthorizationV1Api.md  AutoscalingV2beta2Api.md  BatchApi.md  BatchV1beta1Api.md  CoordinationV1beta1Api.md  CoreApi.md  EventsApi.md  ExtensionsApi.md  ExtensionsV1beta1AllowedHostPath.md  ExtensionsV1beta1Api.md  ExtensionsV1beta1Deployment.md  ExtensionsV1beta1DeploymentRollback.md  ExtensionsV1beta1DeploymentSpec.md  ExtensionsV1beta1DeploymentStrategy.md  ExtensionsV1beta1FsGroupStrategyOptions.md  ExtensionsV1beta1PodSecurityPolicyList.md  ExtensionsV1beta1PodSecurityPolicySpec.md  ExtensionsV1beta1RunAsUserStrategyOptions.md  ExtensionsV1beta1Scale.md  ExtensionsV1beta1SupplementalGroupsStrategyOptions.md  NetworkingApi.md  NetworkingV1Api.md  PolicyV1beta1AllowedFlexVolume.md  PolicyV1beta1Api.md  PolicyV1beta1FsGroupStrategyOptions.md  (+230 more)
kubernetes/: Cargo.toml  README.md  swagger.json  swagger.json.unprocessed
kubernetes/docs/: AdmissionregistrationApi.md  AdmissionregistrationV1alpha1Api.md  ApiextensionsApi.md  ApiregistrationApi.md  ApiregistrationV1beta1Api.md  ApiregistrationV1beta1ServiceReference.md  ApisApi.md  AppsApi.md  AppsV1beta1Api.md  AppsV1beta1Deployment.md  AppsV1beta1DeploymentList.md  AppsV1beta1DeploymentSpec.md  AppsV1beta1DeploymentStatus.md  AppsV1beta1DeploymentStrategy.md  AppsV1beta1RollingUpdateDeployment.md  AppsV1beta1Scale.md  AuthenticationApi.md  AuthenticationV1Api.md  (+716 more)
src/: lib.rs
(+1247 files in other folders)
