[package]
name = "kubernetes-rust"
version = "0.1.0"
description = "Kubernetes rust client"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/ynqa/kubernetes-rust"
readme = "README.md"
keywords = ["kubernetes"]
categories =["web-programming::http-client"]

[lib]
name = "kubernetes_rust"
path = "src/lib.rs"

[dependencies]
dirs = "1.0.4"
serde = "1.0.79"
serde_yaml = "0.8.5"
serde_derive = "1.0.79"
url = "1.7.1"
url_serde = "0.2.0"
failure = "0.1.2"

[dependencies.kubernetes]
path = "kubernetes"
