[package]
name = "kubernetes-rust"
version = "0.1.0"
description = "Kubernetes rust client"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/ynqa/kubernetes-rust"
readme = "README.md"
keywords = ["kubernetes"]
categories =["web-programming::http-client"]

[lib]
name = "kubernetes_rust"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
base64 = "~0.7.0"
futures = "0.1.16"
hyper = "0.11.6"
url = "1.5"

dirs = "1.0.4"
failure = "0.1.2"
hyper-tls = "0.1.4"
native-tls = "0.1.5"
tokio = "0.1.11"
tokio-core = "0.1.17"
openssl = "0.10.12"
url_serde = "0.2.0"

[dependencies.kubernetes]
path = "kubernetes"
