[package]
name = "rust-base"
version = "0.1.0"
description = "Kubernetes rust client"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/ynqa/kubernetes-rust"
readme = "README.md"
keywords = ["kubernetes"]
categories = ["web-programming::http-client"]

[dependencies]
base64 = "0.9.3"
dirs = "1.0.4"
failure = "0.1.2"
hyper = "0.11.6"
hyper-tls = "0.1.4"
native-tls = "0.1.5"
tokio-core = "0.1.17"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_yaml = "0.8.5"
openssl = "0.10.12"

[dev-dependencies]
tempfile = "3.0.4"
futures = "0.1.25"

[dependencies.kubernetes]
version = "1.0.0-snapshot"
path = "kubernetes"
